--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,24 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-25 Sat 20:28]
+#+CAPTION: Clock summary at [2017-03-25 Sat 22:49]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:26* |       |       | 100.0 |
+| *Total time*                                                                | *34:42* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:26   |       |       | 100.0 |
-| Active                                                                      |         | 34:26 |       | 100.0 |
+| Stories                                                                     | 34:42   |       |       | 100.0 |
+| Active                                                                      |         | 34:42 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   2.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.4 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.4 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.4 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  24.5 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  24.3 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.5 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  18.0 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  17.8 |
+| COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.8 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  41.6 |
 | STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   1.8 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.6 |
-| STARTED Improve ODB implementation                                          |         |       | 14:26 |  41.9 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -221,6 +222,88 @@ Tasks:
 - =head -n 200 northwind_ascii.sql | grep ^INSERT | cut -b 1-150 | uniq=
 - paper:
 
+*** COMPLETED ODB options does not cater for types placed in namespaces :story:
+    CLOSED: [2017-03-25 Sat 22:48]
+    CLOCK: [2017-03-25 Sat 22:31]--[2017-03-25 Sat 22:47] =>  0:16
+
+At present the regexes assume the types are placed on the top-level
+ODB directory.
+
+*** COMPLETED Types in namespaces do not have ORM properties applied  :story:
+    CLOSED: [2017-03-25 Sat 22:48]
+
+*Rationale*: We now have a test for this in northwind model and seems
+to work ok.
+
+We seem to be missing the schema and in some cases primary key too.
+
+*** COMPLETED Improve ODB implementation                              :story:
+    CLOSED: [2017-03-25 Sat 22:49]
+    CLOCK: [2017-03-25 Sat 10:02]--[2017-03-25 Sat 11:28] =>  1:26
+    CLOCK: [2017-03-24 Fri 20:41]--[2017-03-24 Fri 20:50] =>  0:09
+    CLOCK: [2017-03-24 Fri 15:49]--[2017-03-24 Fri 15:56] =>  0:07
+    CLOCK: [2017-03-24 Fri 15:11]--[2017-03-24 Fri 15:48] =>  0:37
+    CLOCK: [2017-03-24 Fri 13:32]--[2017-03-24 Fri 13:39] =>  0:07
+    CLOCK: [2017-03-24 Fri 13:01]--[2017-03-24 Fri 13:31] =>  0:30
+    CLOCK: [2017-03-24 Fri 11:52]--[2017-03-24 Fri 11:57] =>  0:05
+    CLOCK: [2017-03-24 Fri 10:06]--[2017-03-24 Fri 11:51] =>  1:45
+    CLOCK: [2017-03-24 Fri 09:01]--[2017-03-24 Fri 10:05] =>  1:04
+    CLOCK: [2017-03-23 Thu 16:22]--[2017-03-23 Thu 18:01] =>  1:39
+    CLOCK: [2017-03-23 Thu 14:05]--[2017-03-23 Thu 16:21] =>  2:16
+    CLOCK: [2017-03-23 Thu 07:21]--[2017-03-23 Thu 12:02] =>  4:41
+
+We have a number of stories related to ODB problems. Basically our
+current implementation is too brittle:
+
+- we cannot easily ignore ODB files;
+- our ODB targets stop working when we place elements arbitrarily in
+  element space.
+
+The key problem is that we made a lot of assumptions about where the
+ODB files (both inputs and outputs) were to be placed and we are now
+paying the price. The right solution for this is to take out all of
+the inputs for the CMakeLists and create types for them:
+
+- augment ODB options with missing parameters;
+- add database types to formattables model, and add "to string";
+- create a type to represent the ODB targets and add it to
+  formattables model. Must also include the regexes too. We should
+  exclude all types that have "generate ORM mapping" set to false.
+
+With all of this data we can now:
+
+- supply it to CMakeLists and create explicit targets for each file.
+- create a msbuild proj file for windows with explicit targets.
+
+Notes:
+
+- we should move the ODB targets to the implementation cmakefile.
+- we should move odb options to source odb.
+- only generate targets for ORM objects.
+- we need to obtain a list of all ORM-enabled types. Each of these
+  will require two targets: the "mv" target and the "odb" target. We
+  should actually merge the two into a single CMake target.
+- if we use types from another model, ODB will fail due to inclusion
+  errors. We need to somehow supply the CMake include directories to
+  ODB. Example:
+
+: get_directory_property(outout include_directories)
+: message(STATUS ${output})
+: foreach(dir in ${output})
+:     -> add -I ${dir}
+
+- we should check that ODB_INCLUDE_DIRS has been set to avoid weird
+  ODB errors.
+
+Problem:
+
+- escaping in the shell is just too difficult. We are struggling to
+  get it to work on Linux with CMake, and it will be even harder to
+  get it to work under CMD on windows. We need to generate an options
+  file for each element - plus a common one for all common
+  options. The element options file will have all options that require
+  regexes.
+
 *** STARTED Allow users to override string prefixes in test data      :story:
     CLOCK: [2017-03-21 Tue 07:10]--[2017-03-21 Tue 07:24] =>  0:14
     CLOCK: [2017-03-21 Tue 06:41]--[2017-03-21 Tue 07:04] =>  0:23
@@ -331,72 +414,6 @@ manually deleting them.
 This also means we can add the ODB files to the visual studio project
 even before they get generated.
 
-*** STARTED Improve ODB implementation                                :story:
-    CLOCK: [2017-03-25 Sat 10:02]--[2017-03-25 Sat 11:28] =>  1:26
-    CLOCK: [2017-03-24 Fri 20:41]--[2017-03-24 Fri 20:50] =>  0:09
-    CLOCK: [2017-03-24 Fri 15:49]--[2017-03-24 Fri 15:56] =>  0:07
-    CLOCK: [2017-03-24 Fri 15:11]--[2017-03-24 Fri 15:48] =>  0:37
-    CLOCK: [2017-03-24 Fri 13:32]--[2017-03-24 Fri 13:39] =>  0:07
-    CLOCK: [2017-03-24 Fri 13:01]--[2017-03-24 Fri 13:31] =>  0:30
-    CLOCK: [2017-03-24 Fri 11:52]--[2017-03-24 Fri 11:57] =>  0:05
-    CLOCK: [2017-03-24 Fri 10:06]--[2017-03-24 Fri 11:51] =>  1:45
-    CLOCK: [2017-03-24 Fri 09:01]--[2017-03-24 Fri 10:05] =>  1:04
-    CLOCK: [2017-03-23 Thu 16:22]--[2017-03-23 Thu 18:01] =>  1:39
-    CLOCK: [2017-03-23 Thu 14:05]--[2017-03-23 Thu 16:21] =>  2:16
-    CLOCK: [2017-03-23 Thu 07:21]--[2017-03-23 Thu 12:02] =>  4:41
-
-We have a number of stories related to ODB problems. Basically our
-current implementation is too brittle:
-
-- we cannot easily ignore ODB files;
-- our ODB targets stop working when we place elements arbitrarily in
-  element space.
-
-The key problem is that we made a lot of assumptions about where the
-ODB files (both inputs and outputs) were to be placed and we are now
-paying the price. The right solution for this is to take out all of
-the inputs for the CMakeLists and create types for them:
-
-- augment ODB options with missing parameters;
-- add database types to formattables model, and add "to string";
-- create a type to represent the ODB targets and add it to
-  formattables model. Must also include the regexes too. We should
-  exclude all types that have "generate ORM mapping" set to false.
-
-With all of this data we can now:
-
-- supply it to CMakeLists and create explicit targets for each file.
-- create a msbuild proj file for windows with explicit targets.
-
-Notes:
-
-- we should move the ODB targets to the implementation cmakefile.
-- we should move odb options to source odb.
-- only generate targets for ORM objects.
-- we need to obtain a list of all ORM-enabled types. Each of these
-  will require two targets: the "mv" target and the "odb" target. We
-  should actually merge the two into a single CMake target.
-- if we use types from another model, ODB will fail due to inclusion
-  errors. We need to somehow supply the CMake include directories to
-  ODB. Example:
-
-: get_directory_property(outout include_directories)
-: message(STATUS ${output})
-: foreach(dir in ${output})
-:     -> add -I ${dir}
-
-- we should check that ODB_INCLUDE_DIRS has been set to avoid weird
-  ODB errors.
-
-Problem:
-
-- escaping in the shell is just too difficult. We are struggling to
-  get it to work on Linux with CMake, and it will be even harder to
-  get it to work under CMD on windows. We need to generate an options
-  file for each element - plus a common one for all common
-  options. The element options file will have all options that require
-  regexes.
-
 *** Primitives are not comparable                                     :story:
 
 Our wrapping code around primitives means we can no longer perform
@@ -412,14 +429,10 @@ primitives to make this possible:
 With this we would generate the appropriate operators by delegating to
 the underlying type.
 
-*** ODB options does not cater for types placed in namespaces         :story:
+*** Add column name support to ORM                                    :story:
 
-At present the regexes assume the types are placed on the top-level
-ODB directory.
-
-*** Types in namespaces do not have ORM properties applied            :story:
-
-We seem to be missing the schema and in some cases primary key too.
+At present we need to fall back to ODB pragmas in order to rename a
+column. We should have =yarn.orm.column_name=.
 
 *** Check for incompatibility between input language and enabled kernels :story:
 
@@ -542,11 +555,6 @@ includes. There are some differences though:
   part requires some hacking. We could have an option in locator:
   "apply archetype postfix" supplied as an argument. Since we have the
   Visual Studio element we have visibility of all enabled versions.
-
-*** Add column name support to ORM                                    :story:
-
-At present we need to fall back to ODB pragmas in order to rename a
-column. We should have =yarn.orm.column_name=.
 
 *** Setting include and source directory to empty                     :story:
 
