--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,29 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-25 Sat 22:49]
+#+CAPTION: Clock summary at [2017-03-25 Sat 22:52]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:42* |       |       | 100.0 |
+| *Total time*                                                                | *35:06* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:42   |       |       | 100.0 |
-| Active                                                                      |         | 34:42 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   2.5 |
+| Stories                                                                     | 35:06   |       |       | 100.0 |
+| Active                                                                      |         | 35:06 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.4 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.4 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.3 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.4 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  24.3 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  24.0 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.5 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  17.8 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  17.6 |
 | COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.8 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  41.6 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  41.1 |
 | STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   1.8 |
 | STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-03-25 Sat 22:28]--[2017-03-25 Sat 22:52] =>  0:24
     CLOCK: [2017-03-23 Thu 06:24]--[2017-03-23 Thu 07:05] =>  0:41
     CLOCK: [2017-03-20 Mon 11:11]--[2017-03-20 Mon 11:22] =>  0:11
 
@@ -303,6 +304,28 @@ Problem:
   file for each element - plus a common one for all common
   options. The element options file will have all options that require
   regexes.
+
+*** COMPLETED Start signing all tags                                  :story:
+    CLOSED: [2017-03-25 Sat 22:50]
+
+*Rationale*: We are now signing everything including commits and tags.
+
+We should really be signing all git tags.
+
+Links:
+
+- [[https://git-scm.com/book/tr/v2/Git-Tools-Signing-Your-Work][Git Tools - Signing Your Work]]
+- [[http://stackoverflow.com/questions/10161198/is-there-a-way-to-autosign-commits-in-git-with-a-gpg-key][Is there a way to “autosign” commits in Git with a GPG key?]]
+- [[http://emacs.stackexchange.com/questions/18514/how-to-automatically-sign-commits-with-magit][How to automatically sign commits with magit?]]
+
+*** COMPLETED Objects without primary keys do not have =no_id= set    :story:
+    CLOSED: [2017-03-25 Sat 22:50]
+
+*Rationale*: this seems to have gone away with the new ODB implementation.
+
+Previously we were automatically adding the ODB pragma =no_id= to
+objects that had no primary key set. This no longer seems to be
+happening.
 
 *** STARTED Allow users to override string prefixes in test data      :story:
     CLOCK: [2017-03-21 Tue 07:10]--[2017-03-21 Tue 07:24] =>  0:14
@@ -572,12 +595,6 @@ At present we do:
 
 The "c++-" seems a bit redundant.
 
-*** Objects without primary keys do not have =no_id= set              :story:
-
-Previously we were automatically adding the ODB pragma =no_id= to
-objects that had no primary key set. This no longer seems to be
-happening.
-
 *** Rename main Dogen package in Debian                               :story:
 
 At present we seem to have called our package =dogen-applications=:
@@ -628,16 +645,6 @@ paths. We need to catalogue them all and name them properly.
   the headers. Only applicable to c++.
 - include directory: aka inclusion directory; directory to place in
   the include path.
-
-*** Start signing all tags                                            :story:
-
-We should really be signing all git tags.
-
-Links:
-
-- [[https://git-scm.com/book/tr/v2/Git-Tools-Signing-Your-Work][Git Tools - Signing Your Work]]
-- [[http://stackoverflow.com/questions/10161198/is-there-a-way-to-autosign-commits-in-git-with-a-gpg-key][Is there a way to “autosign” commits in Git with a GPG key?]]
-- [[http://emacs.stackexchange.com/questions/18514/how-to-automatically-sign-commits-with-magit][How to automatically sign commits with magit?]]
 
 *** Not setting output language results in weird errors               :story:
 
