--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,25 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-25 Sat 22:52]
+#+CAPTION: Clock summary at [2017-03-26 Sun 10:14]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:06* |       |       | 100.0 |
+| *Total time*                                                                | *35:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:06   |       |       | 100.0 |
-| Active                                                                      |         | 35:06 |       | 100.0 |
+| Stories                                                                     | 35:19   |       |       | 100.0 |
+| Active                                                                      |         | 35:19 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.4 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.3 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.4 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  24.0 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  23.9 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.5 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  17.6 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  17.5 |
 | COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.8 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  41.1 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   1.8 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.5 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  40.9 |
+| COMPLETED Do not use underscores in ORM stereotypes                         |         |       |  0:13 |   0.6 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   1.7 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -326,6 +327,13 @@ Links:
 Previously we were automatically adding the ODB pragma =no_id= to
 objects that had no primary key set. This no longer seems to be
 happening.
+
+*** COMPLETED Do not use underscores in ORM stereotypes               :story:
+    CLOSED: [2017-03-26 Sun 10:14]
+    CLOCK: [2017-03-26 Sun 10:01]--[2017-03-26 Sun 10:14] =>  0:13
+
+We are able to use spaces in stereotypes so we should avoid using
+underscores.
 
 *** STARTED Allow users to override string prefixes in test data      :story:
     CLOCK: [2017-03-21 Tue 07:10]--[2017-03-21 Tue 07:24] =>  0:14
@@ -756,6 +764,10 @@ exports.
 It is used as follows:
 
 : class MODEL_DECL Tags xxx
+
+We should probably also add GCC support.
+
+- [[https://gcc.gnu.org/wiki/Visibility][GCC Visibility]]
 
 *** Add =targetver.h= support                                         :story:
 
