--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-26 Sun 10:14]
+#+CAPTION: Clock summary at [2017-03-26 Sun 11:30]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:19* |       |       | 100.0 |
+| *Total time*                                                                | *36:34* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:19   |       |       | 100.0 |
-| Active                                                                      |         | 35:19 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.6 |
+| Stories                                                                     | 36:34   |       |       | 100.0 |
+| Active                                                                      |         | 36:34 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:16 |   3.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.4 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.3 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.2 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.4 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  23.9 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  23.1 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.5 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  17.5 |
-| COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.8 |
-| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  40.9 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  16.9 |
+| COMPLETED ODB options does not cater for types placed in namespaces         |         |       |  0:16 |   0.7 |
+| COMPLETED Improve ODB implementation                                        |         |       | 14:26 |  39.5 |
 | COMPLETED Do not use underscores in ORM stereotypes                         |         |       |  0:13 |   0.6 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   1.7 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.4 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  1:52 |   5.1 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -336,6 +336,7 @@ We are able to use spaces in stereotypes so we should avoid using
 underscores.
 
 *** STARTED Allow users to override string prefixes in test data      :story:
+    CLOCK: [2017-03-26 Sun 10:15]--[2017-03-26 Sun 11:30] =>  1:15
     CLOCK: [2017-03-21 Tue 07:10]--[2017-03-21 Tue 07:24] =>  0:14
     CLOCK: [2017-03-21 Tue 06:41]--[2017-03-21 Tue 07:04] =>  0:23
 
@@ -444,6 +445,31 @@ manually deleting them.
 
 This also means we can add the ODB files to the visual studio project
 even before they get generated.
+
+*** Generate Redis get/set code                                       :story:
+
+In theory, there is nothing stopping us from having a Redis facet that
+takes in as an input the serialisation method. For now we just need to
+support boost serialisation. The interface could be configurable so
+that users can choose the archive type. Types could be marked as
+=cacheable= and then suitable parameters supplied such as the
+serialisation mechanism.
+
+As with hashing, we do not want to generate code for all objects; only
+for those the user marks as cacheable.
+
+The interface should support two main methods:
+
+- get
+- set
+
+Both receive an instance of Redis. We could implement it in C to avoid
+additional dependencies.
+
+However, it should also be possible to use say =memcached= as the
+cache rather than redis. We need to create a layer of indirection
+between the generic caching (meta-model concept) and the actual
+caching (platform, implementation layer).
 
 *** Primitives are not comparable                                     :story:
 
