--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-07 Wed 22:41]
+#+CAPTION: Clock summary at [2017-06-30 Fri 13:33]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:38* |       |       | 100.0 |
+| *Total time*                                                                | *44:01* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:38   |       |       | 100.0 |
-| Active                                                                      |         | 39:38 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  16.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   2.1 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  11.1 |
-| COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.4 |
-| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  21.8 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   5.8 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  27.3 |
-| STARTED Move element segmentation into yarn                                 |         |       |  1:32 |   3.9 |
-| STARTED Clean up yarn                                                       |         |       |  4:16 |  10.8 |
+| Stories                                                                     | 44:01   |       |       | 100.0 |
+| Active                                                                      |         | 44:01 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  15.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   1.9 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  10.0 |
+| COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.3 |
+| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  19.6 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   5.2 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  24.6 |
+| STARTED Move element segmentation into yarn                                 |         |       |  1:32 |   3.5 |
+| STARTED Clean up yarn                                                       |         |       |  8:39 |  19.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -382,6 +382,7 @@ Notes:
   then see where segmentation ends.
 
 *** STARTED Clean up yarn                                             :story:
+    CLOCK: [2017-06-30 Fri 09:10]--[2017-06-30 Fri 13:33] =>  4:23
     CLOCK: [2017-06-07 Wed 18:25]--[2017-06-07 Wed 22:41] =>  4:16
 
 It seems we have reached the need to perform yet another clean up in
@@ -420,7 +421,6 @@ for(auto& m : expanded) {
     r.push_back(convert(combined));
 }
 #+end_src
-
 
 *** Move enablement into yarn                                         :story:
 
