--- a/doc/agile/v1/sprint_backlog_01.org
+++ b/doc/agile/v1/sprint_backlog_01.org
@@ -13,23 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-06-30 Fri 13:33]
+#+CAPTION: Clock summary at [2017-07-01 Sat 16:12]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *44:01* |       |       | 100.0 |
+| *Total time*                                                                | *46:27* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 44:01   |       |       | 100.0 |
-| Active                                                                      |         | 44:01 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  15.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   1.9 |
-| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |  10.0 |
+| Stories                                                                     | 46:27   |       |       | 100.0 |
+| Active                                                                      |         | 46:27 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  6:42 |  14.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:49 |   1.8 |
+| COMPLETED Create a simple Emacs mode for stitch                             |         |       |  4:25 |   9.5 |
 | COMPLETED WIX Path has changed on appveyor                                  |         |       |  0:09 |   0.3 |
-| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  19.6 |
-| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   5.2 |
-| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  24.6 |
-| STARTED Move element segmentation into yarn                                 |         |       |  1:32 |   3.5 |
-| STARTED Clean up yarn                                                       |         |       |  8:39 |  19.7 |
+| COMPLETED Move decoration into yarn                                         |         |       |  8:38 |  18.6 |
+| COMPLETED Fix broken builds due to disk space                               |         |       |  1:32 |   3.3 |
+| STARTED Add support for proper JSON serialisation in C++                    |         |       |  2:18 |   5.0 |
+| STARTED Start documenting the theoretical aspects of Dogen                  |         |       | 10:49 |  23.3 |
+| STARTED Move element segmentation into yarn                                 |         |       |  1:32 |   3.3 |
+| STARTED Remove =is_target= from frontends                                   |         |       |  0:54 |   1.9 |
+| STARTED Clean up yarn                                                       |         |       |  8:39 |  18.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -398,6 +400,13 @@ Notes:
 - so in conclusion, we to move decoration, enablement and dependencies
   into yarn (basically decoration and artefact properties) first and
   then see where segmentation ends.
+
+*** STARTED Remove =is_target= from frontends                         :story:
+    CLOCK: [2017-07-01 Sat 15:18]--[2017-07-01 Sat 16:12] =>  0:54
+
+At present we seem to be supplying the =is_target= flag to the
+frontends, but its not clear why that is. Ideally, we should not care
+at this point who the target is. Try removing it and see what happens.
 
 *** STARTED Clean up yarn                                             :story:
     CLOCK: [2017-06-30 Fri 09:10]--[2017-06-30 Fri 13:33] =>  4:23
